Fix images on mobile

--- a/src/assets/_loading.scss
+++ b/src/assets/_loading.scss
@@ -45,6 +45,7 @@
 div.aligncenter {
   display: block;
   margin: 5px auto 5px auto;
+  max-width: 100%;
 }
 
 .alignright {
